--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
         <li>Vagrant</li>
         <li>Docker</li>
         <li>Ansible</li>
-        <li>Integração Continua</li>
-        <li>Integração Continua 2</li>
-    </ul>
+        <li>Integração Continua - Software</li>
+   </ul>
 </body>
 </html>
